# gproshan

./: .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE.md  MDICT.md  Makefile  README.md  gproshan  gproshan.cpp  gproshanConfig.cmake.in  sampling_shape  sampling_shape_old  tesiscode  test_fastmarching  test_geodesics.cpp  test_holes  test_hybrid_denoising.cpp  test_image_denoising.cpp  test_mesh_denoising.cpp  view_shape
.github/workflows/: build.yml
apps/: CMakeLists.txt  gproshan.cpp  test_geodesics.cpp  test_image_denoising.cpp  test_scanner.cpp
cmake/: FindOptiX.cmake
imgui/: CMakeLists.txt
include/: app_viewer.h  che.h  che_fill_hole.h  che_img.h  che_obj.h  che_off.h  che_ply.h  che_poisson.h  che_ptx.h  che_sphere.h  config.h  d_basis.h  d_basis_cosine.h  d_basis_dct.h  d_dict_learning.h  d_image_denoising.h  d_mesh.h  d_mesh_apps.h  decimation.h  denoising.h  dictionary.h  dijkstra.h  embree.h  face.h  fairing.h  fairing_spectral.h  fairing_taubin.h  fastmarching.h  geodesics.h  geodesics_ptp.h  heat_flow.h  holes.h  include.h  include_arma.h  kdtree.h  key_components.h  key_points.h  keycomponents.h  keypoints.h  laplacian.h  (+12 more)
include/cuda/: che.cuh  fastmarching.cuh  geodesics_ptp.cuh  geodesics_ptp_coalescence.cuh  test_geodesics_ptp.cuh  test_geodesics_ptp_coalescence.cuh  vertex.cuh
include/features/: descriptor.h  key_components.h  shot.h
include/geodesics/: dijkstra.h  geodesics.h  geodesics_ptp.h  heat_flow.h  heat_method.h  sampling.h  vertex.cuh
include/geometry/: convex_hull.h
include/gproshan/: app_viewer.h  config.h.in  include.h  include_arma.h  util.h
include/imgui/: CMakeLists.txt
include/laplacian/: fairing.h  fairing_spectral.h  fairing_taubin.h  laplacian.h
include/mdict/: basis.h  basis_cosine.h  basis_dct.h  d_basis.h  d_basis_cosine.h  d_basis_dct.h  d_dict_learning.h  d_hybrid_denoising.h  d_image_denoising.h  d_mesh.h  d_mesh_apps.h  d_mesh_denoising.h  denoising.h  dictionary.h  image_denoising.h  inpainting.h  mdict.h  msparse_coding.h  patch.h  super_resolution.h  synthesis.h
include/mesh/: che.h  che_fill_hole.h  che_img.h  che_obj.h  che_off.h  che_ply.h  che_poisson.h  che_ptx.h  che_sphere.h  che_xyz.h  decimation.h  quaternion.h  simplification.h  vertex.h
include/raytracing/: embree.h  raytracing.h  rt_embree.h  rt_embree_splat.h  rt_optix.h
include/viewer/: Camera.h  Quaternion.h  Shader.h  Viewer.h  camera.h  che_viewer.h  frame.h  include_opengl.h  shader.h  viewer.h
shaders/: colormap.glsl  fragment.glsl  fragment_depth.glsl  fragment_frame.glsl  fragment_gradient.glsl  fragment_normals.glsl  fragment_pointcloud.glsl  fragment_sphere.glsl  geometry.glsl  geometry_gradient.glsl  geometry_normals.glsl  material.glsl  new_fragment.glsl  new_geometry.glsl  new_vertex.glsl  shading.glsl  vertex.glsl  vertex_depth.glsl  vertex_frame.glsl  vertex_gradient.glsl  vertex_normals.glsl  vertex_pointcloud.glsl  vertex_sphere.glsl
src/: .main.cpp.swo  CMakeLists.txt  app_viewer.cpp  che.cpp  che_fill_hole.cpp  che_img.cpp  che_obj.cpp  che_off.cpp  che_ply.cpp  che_poisson.cpp  che_ptx.cpp  che_sphere.cpp  d_basis.cpp  d_basis_cosine.cpp  d_basis_dct.cpp  d_dict_learning.cpp  d_image_denoising.cpp  d_mesh.cpp  d_mesh_apps.cpp  decimation.cpp  denoising.cpp  dictionary.cpp  dijkstra.cpp  embree.cpp  face.cpp  fairing.cpp  fairing_spectral.cpp  fairing_taubin.cpp  fastmarching.cpp  geodesics.cpp  geodesics_ptp.cpp  heat_flow.cpp  holes.cpp  kdtree.cpp  key_components.cpp  key_points.cpp  keycomponents.cpp  keypoints.cpp  laplacian.cpp  main.cpp  (+14 more)
src/cuda/: che.cu  fastmarching.cu  geodesics_ptp.cu  geodesics_ptp_coalescence.cu  heat_flow.cu  test_geodesics_ptp.cu  test_geodesics_ptp_coalescence.cu  vertex.cu
src/features/: descriptor.cpp  key_components.cpp  key_points.cpp  shot.cpp
src/geodesics/: che.cu  dijkstra.cpp  geodesics.cpp  geodesics_ptp.cpp  geodesics_ptp.cu  geodesics_ptp_coalescence.cu  heat_flow.cpp  heat_method.cpp  heat_method.cu  sampling.cpp  test_geodesics_ptp.cpp  test_geodesics_ptp.cu  test_geodesics_ptp_coalescence.cu  vertex.cu
src/geometry/: convex_hull.cpp
src/gproshan/: CMakeLists.txt  app_viewer.cpp  util.cpp
src/gproshan/features/: descriptor.cpp  key_components.cpp  key_points.cpp
src/gproshan/geodesics/: dijkstra.cpp  geodesics.cpp  geodesics_ptp.cpp  geodesics_ptp.cu  geodesics_ptp_coalescence.cu  heat_method.cpp  heat_method.cu  sampling.cpp  test_geodesics_ptp.cpp  test_geodesics_ptp.cu  test_geodesics_ptp_coalescence.cu
src/gproshan/geometry/: convex_hull.cpp  mat.cpp
src/gproshan/laplacian/: fairing.cpp  fairing_spectral.cpp  fairing_taubin.cpp  laplacian.cpp
src/gproshan/mdict/: basis.cpp  basis_cosine.cpp  basis_dct.cpp  image_denoising.cpp  mdict.cpp  msparse_coding.cpp  patch.cpp
src/gproshan/mesh/: che.cpp  che.cu  che_cuda.cpp  che_fill_hole.cpp  che_img.cpp  che_obj.cpp  che_off.cpp  che_pcd.cpp  che_ply.cpp  che_poisson.cpp  che_pts.cpp  che_ptx.cpp  che_sphere.cpp  che_xyz.cpp  kdtree.cpp  quaternion.cpp  simplification.cpp  vertex.cpp  vertex.cu
src/gproshan/pointcloud/: kdtree.cpp  knn.cpp
src/gproshan/raytracing/: embree.cpp  optix.cpp  optix.cu  raytracing.cpp  rt_embree.cpp  rt_optix.cpp  rt_optix.cu
src/gproshan/scenes/: scanner.cpp  scene.cpp
src/gproshan/viewer/: camera.cpp  che_viewer.cpp  frame.cpp  scene_viewer.cpp  shader.cpp  viewer.cpp
src/imgui/: CMakeLists.txt
src/laplacian/: fairing.cpp  fairing_spectral.cpp  fairing_taubin.cpp  laplacian.cpp
src/mdict/: basis.cpp  basis_cosine.cpp  basis_dct.cpp  d_basis.cpp  d_basis_cosine.cpp  d_basis_dct.cpp  d_dict_learning.cpp  d_hybrid_denoising.cpp  d_image_denoising.cpp  d_mesh.cpp  d_mesh_apps.cpp  d_mesh_denoising.cpp  denoising.cpp  dictionary.cpp  image_denoising.cpp  inpainting.cpp  mdict.cpp  msparse_coding.cpp  patch.cpp  super_resolution.cpp  synthesis.cpp
src/mesh/: che.cpp  che.cu  che_fill_hole.cpp  che_img.cpp  che_obj.cpp  che_off.cpp  che_ply.cpp  che_poisson.cpp  che_pts.cpp  che_ptx.cpp  che_sphere.cpp  che_xyz.cpp  decimation.cpp  (+5 more)
(+89 files in other folders)
